--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Download Twitter Videos</title>
-    <script type="module" crossorigin src="/video-downloader-app/assets/index.1586b6af.js"></script>
-    <link rel="stylesheet" href="/video-downloader-app/assets/index.d56cbfc5.css">
+    <script type="module" crossorigin src="/video-downloader-app/assets/index.a31e7335.js"></script>
+    <link rel="stylesheet" href="/video-downloader-app/assets/index.1e6e7b1d.css">
   </head>
   <body>
     <div id="root"></div>
