--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="icon" type="image/x-icon" href="/video-downloader-app/assets/favicon.b1a45cd7.svg" />
     <title>Download Twitter Videos</title>
-    <script type="module" crossorigin src="/video-downloader-app/assets/index.166721ca.js"></script>
-    <link rel="stylesheet" href="/video-downloader-app/assets/index.8bb50ec2.css">
+    <script type="module" crossorigin src="/video-downloader-app/assets/index.a810d702.js"></script>
+    <link rel="stylesheet" href="/video-downloader-app/assets/index.2b24ceea.css">
   </head>
   <body>
     <div id="root"></div>
